--- a/BookShopBackend/package.json
+++ b/BookShopBackend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-time": "^3.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0"
   }
