--- a/BookShopBackend/package.json
+++ b/BookShopBackend/package.json
@@ -13,6 +13,7 @@
     "date-and-time": "^0.14.1",
     "date-time": "^3.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "morgan": "^1.10.0"
   }
 }
