--- a/BookShopBackend/package.json
+++ b/BookShopBackend/package.json
@@ -14,6 +14,7 @@
     "date-time": "^3.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11"
   }
 }
