--- a/BookShopBackend/package.json
+++ b/BookShopBackend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "date-and-time": "^0.14.1",
     "date-time": "^3.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
